# SnapText-AI

./: .gitignore  app.py  pyproject.toml
snaptext_ai/: authenticator.py  config.py  document_ai.py  rag_pipeline.py
