[tool.poetry]
name = "snaptext-ai"
version = "0.1.0"
description = ""
authors = ["Rupanshu Kapoor <rupanshukapoor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.7"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
